# resp-cli

./: .gitignore  AGENTS.MD  Cargo.toml  LICENSE  README.md  bench.md  resp-cli-history.txt
.github/workflows/: build.yml  publish.yml
src/: command_docs.rs  completion.rs  connection.rs  formatter.rs  lib.rs  main.rs
src/commands/: command_docs.rs  executor.rs  mod.rs
src/completion/: mod.rs
src/config/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
tests/: integration_test.rs
