[package]
name = "resp-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rustyline = "10.1.0"
rustyline-derive = "0.4.0"
redis = { version = "1.2.0", features = ["tokio-rustls-comp", "tls-rustls"] }
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
colored = "2.1.0"
tokio = { version = "1.37.0", features = ["full"] }
